# tinkoff-ngram

./: .gitignore  .pre-commit-config.yaml  README.md  generate.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
data/poems/Blok/: info.csv  Возмездие.txt  Двенадцать.txt  Корреспонденция Бальмонта из Мексики.txt  Скифы.txt  Соловьиный сад.txt  Стихотворения 1897-1903 гг, не вошедшие в основное собрание.txt  Стихотворения. Книга вторая (1904-1908).txt  Стихотворения. Книга первая (1898-1904).txt  Стихотворения. Книга третья (1907-1916).txt  (+1 more)
data/tweets/: tweets_positive_1.txt  tweets_positive_10.txt  tweets_positive_100.txt  tweets_positive_11.txt  tweets_positive_12.txt  tweets_positive_13.txt  tweets_positive_14.txt  tweets_positive_15.txt  tweets_positive_16.txt  tweets_positive_17.txt  tweets_positive_18.txt  tweets_positive_19.txt  tweets_positive_2.txt  tweets_positive_20.txt  tweets_positive_21.txt  tweets_positive_22.txt  tweets_positive_23.txt  tweets_positive_24.txt  tweets_positive_25.txt  tweets_positive_26.txt  tweets_positive_27.txt  tweets_positive_28.txt  tweets_positive_29.txt  tweets_positive_3.txt  tweets_positive_30.txt  tweets_positive_31.txt  tweets_positive_32.txt  tweets_positive_33.txt  tweets_positive_34.txt  tweets_positive_35.txt  tweets_positive_36.txt  tweets_positive_37.txt  tweets_positive_38.txt  tweets_positive_39.txt  tweets_positive_4.txt  tweets_positive_40.txt  tweets_positive_41.txt  tweets_positive_42.txt  tweets_positive_43.txt  tweets_positive_44.txt  (+60 more)
tinkoff_ngram/: data_loader.py  ngram.py  parser.py
(+330 files in other folders)
