[tool.poetry]
name = "tinkoff-ngram"
version = "0.1.0"
description = ""
authors = ["Nikolay Chechulin <nchechulin@protonmail.com>"]
readme = "README.md"
packages = [{include = "tinkoff_ngram"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
